--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+data/*
+chinese_roberta_wwm_ext_pytorch/*
+chinese_wwm_pytorch/*
+.vscode/*
+test_all/*
+note.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
